--- a/index.css
+++ b/index.css
@@ -1,13 +1,21 @@
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    background-color: rgb(194, 194, 194);
+}
+
 #grid-container {
     display: flex;
     flex-wrap: wrap;
 
-    /* width: 960;
-    height: 960; */
+    border: 10px solid rgb(88, 88, 88);
 }
 
 .tile {
-    background-color: red;
+    background-color: black;
     margin: 0;
     border: 0;
 }
